Feature(Layout): Added code section

--- a/demo/layout.html
+++ b/demo/layout.html
@@ -447,7 +447,7 @@
     </div>
 </div>                <!-- SIDEBAR:End -->
                 <!-- CONTENT:Start -->
-                <div id="cucu" class="main-content">
+                <div class="main-content">
                     <div class="page-content">
                         <div class="jumbotron content-header">
                             <div class="container-fluid">
