Feature(DataFormatters): Update Data formatters and regenerate html files

--- a/demo/plugin_jqgrid.html
+++ b/demo/plugin_jqgrid.html
@@ -378,6 +378,11 @@
                             </a>
                         </li>
                         <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-tabs">
+                                <span class="menu-text">Tabs</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/js_components.html#js-utilities">
                                 <span class="menu-text">Utilities</span>
                             </a>
@@ -612,7 +617,7 @@
         <div id="main_footer" class="footer">
     <div class="footer-inner text-center">
         <div class="footer-content">
-            <span>Copyright &copy; 2011 - 2016 <strong>eMAG</strong>. <br class="visible-xs-inline">All rights reserved.</span>
+            <span>Copyright &copy; 2011 - 2017 <strong>eMAG</strong>. <br class="visible-xs-inline">All rights reserved.</span>
         </div>
     </div>
 </div>        <!-- FOOTER:End -->
@@ -1284,7 +1289,7 @@
                     {
                         'id': '0',
                         'notAvailable': 'String value',
-                        'dateTime': '2016-07-29 11:53:59',
+                        'dateTime': '2016-07-29 11:53:59.000000',
                         'date': '2016-07-29',
                         'time': '11:53:59',
                         'userEmail': 'john.doe@emag.ro',
