--- a/demo/plugin_ajax_modals.html
+++ b/demo/plugin_ajax_modals.html
@@ -375,6 +375,11 @@
                             </a>
                         </li>
                         <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-tabs">
+                                <span class="menu-text">Tabs</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/js_components.html#js-utilities">
                                 <span class="menu-text">Utilities</span>
                             </a>
@@ -497,7 +502,7 @@ var modalTest = new PhotonModal({
                 <div id="main_footer" class="footer">
     <div class="footer-inner text-center">
         <div class="footer-content">
-            <span>Copyright &copy; 2011 - 2016 <strong>eMAG</strong>. <br class="visible-xs-inline">All rights reserved.</span>
+            <span>Copyright &copy; 2011 - 2017 <strong>eMAG</strong>. <br class="visible-xs-inline">All rights reserved.</span>
         </div>
     </div>
 </div>                <!-- FOOTER:End -->
