Modified style for UI KIT footer panel

--- a/demo/css_components.html
+++ b/demo/css_components.html
@@ -2262,42 +2262,43 @@
                                                                 <h4 class="panel-title">Panel with table example</h4>
                                                             </div>
                                                             <div class="panel-body">
-                                                                <span>Some text or a couple of buttons can be placed here</span>
+                                                                <p>Some text or a couple of buttons can be placed here</p>
+                                                                <div class="table-responsive">
+                                                                    <table class="table table-bordered">
+                                                                        <thead>
+                                                                        <tr>
+                                                                            <th>#</th>
+                                                                            <th>First Name</th>
+                                                                            <th>Last Name</th>
+                                                                            <th>Username</th>
+                                                                            <th>Hobby</th>
+                                                                        </tr></thead>
+                                                                        <tbody>
+                                                                        <tr>
+                                                                            <th scope="row">1</th>
+                                                                            <td>Mark</td>
+                                                                            <td>Otto</td>
+                                                                            <td>@mdo</td>
+                                                                            <td>Fishing</td>
+                                                                        </tr>
+                                                                        <tr>
+                                                                            <th scope="row">2</th>
+                                                                            <td>Jacob</td>
+                                                                            <td>Thornton</td>
+                                                                            <td>@fat</td>
+                                                                            <td>Racing</td>
+                                                                        </tr>
+                                                                        <tr>
+                                                                            <th scope="row">3</th>
+                                                                            <td>Larry</td>
+                                                                            <td>the Bird</td>
+                                                                            <td>@twitter</td>
+                                                                            <td>eMAG</td>
+                                                                        </tr></tbody>
+                                                                    </table>
+                                                                </div>
                                                             </div>
-                                                            <div class="table-responsive">
-                                                                <table class="table table-bordered">
-                                                                <thead>
-                                                                <tr>
-                                                                    <th>#</th>
-                                                                    <th>First Name</th>
-                                                                    <th>Last Name</th>
-                                                                    <th>Username</th>
-                                                                    <th>Hobby</th>
-                                                                </tr></thead>
-                                                                <tbody>
-                                                                <tr>
-                                                                    <th scope="row">1</th>
-                                                                    <td>Mark</td>
-                                                                    <td>Otto</td>
-                                                                    <td>@mdo</td>
-                                                                    <td>Fishing</td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <th scope="row">2</th>
-                                                                    <td>Jacob</td>
-                                                                    <td>Thornton</td>
-                                                                    <td>@fat</td>
-                                                                    <td>Racing</td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <th scope="row">3</th>
-                                                                    <td>Larry</td>
-                                                                    <td>the Bird</td>
-                                                                    <td>@twitter</td>
-                                                                    <td>eMAG</td>
-                                                                </tr></tbody>
-                                                            </table>
-                                                            </div>
+
                                                             <div class="panel-body">
                                                                 <span>More text or a couple of buttons can be placed here</span>
                                                             </div>
