--- a/demo/js_components.html
+++ b/demo/js_components.html
@@ -597,6 +597,31 @@
                             </div>
                         </div>
                     </div>
+                    <div class="show-panel ">
+                        <div class="show-panel-body">
+                            <p><strong>Alerts modals:</strong></p>
+                            <div class="pad-sep-20">
+                                <div class="row">
+                                    <div class="col-lg-8 col-lg-offset-2">
+                                        <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                                            <div class="btn-group" role="group">
+                                                <button type="button" id="confirmation_alert" class="btn btn-default">Confirmation alert modal</button>
+                                            </div>
+                                            <div class="btn-group" role="group">
+                                                <button type="button" id="confirmation_alert_no_overlay" class="btn btn-default">Confirmation alert modal - No overlay</button>
+                                            </div>
+                                            <div class="btn-group" role="group">
+                                                <button type="button" id="error_alert" class="btn btn-default">Error alert modal</button>
+                                            </div>
+                                            <div class="btn-group" role="group">
+                                                <button type="button" id="error_alert_no_overlay" class="btn btn-default">Error alert modal - No overlay</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </section>
                 <section id="js-custom-error-messages" class="pad-top-20">
                     <div class="show-panel ">
@@ -1222,6 +1247,19 @@
                 });
                 $('#show_error').on('click',function(){
                     addNotification("<span>Oh SNAP! This is an error message: Run!</span>","danger");
+                });
+
+                $('#confirmation_alert').on('click', function () {
+                    confirmationAlertModal('Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque arcu, tempor vitae laoreet nec, hendrerit ut augue.', 'Confirmation alert modal');
+                });
+                $('#confirmation_alert_no_overlay').on('click', function () {
+                    confirmationAlertModal('Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque arcu, tempor vitae laoreet nec, hendrerit ut augue.', 'Confirmation alert modal', false);
+                });
+                $('#error_alert').on('click', function () {
+                    errorAlertModal('Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque arcu, tempor vitae laoreet nec, hendrerit ut augue.', 'Error alert modal');
+                });
+                $('#error_alert_no_overlay').on('click', function () {
+                    errorAlertModal('Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque arcu, tempor vitae laoreet nec, hendrerit ut augue.', 'Error alert modal', false);
                 });
 
                 $('#block_page').on('click', function() {
