Refactor(Modals): Make code review changes

--- a/demo/js_components.html
+++ b/demo/js_components.html
@@ -605,16 +605,16 @@
                                     <div class="col-lg-8 col-lg-offset-2">
                                         <div class="btn-group btn-group-justified" role="group" aria-label="...">
                                             <div class="btn-group" role="group">
-                                                <button type="button" id="confirmation_alert" class="btn btn-default">Confirmation alert modal</button>
+                                                <button type="button" id="confirmation_alert" class="btn btn-default">Confirmation</button>
                                             </div>
                                             <div class="btn-group" role="group">
-                                                <button type="button" id="confirmation_alert_no_overlay" class="btn btn-default">Confirmation alert modal - No overlay</button>
+                                                <button type="button" id="confirmation_alert_no_overlay" class="btn btn-default">Confirmation - No overlay</button>
                                             </div>
                                             <div class="btn-group" role="group">
-                                                <button type="button" id="error_alert" class="btn btn-default">Error alert modal</button>
+                                                <button type="button" id="error_alert" class="btn btn-default">Error</button>
                                             </div>
                                             <div class="btn-group" role="group">
-                                                <button type="button" id="error_alert_no_overlay" class="btn btn-default">Error alert modal - No overlay</button>
+                                                <button type="button" id="error_alert_no_overlay" class="btn btn-default">Error - No overlay</button>
                                             </div>
                                         </div>
                                     </div>
