--- a/demo/css_components.html
+++ b/demo/css_components.html
@@ -179,7 +179,7 @@
                         </li>
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/branding.html#icons">
-                                <span class="menu-text">Icons</span>
+                                <span class="menu-text">Icons & flags</span>
                             </a>
                         </li>
                     </ul>
